@@ -333,53 +333,13 @@ name|listAll
 argument_list|()
 control|)
 block|{
-if|if
-condition|(
-operator|!
 name|files
 operator|.
 name|add
 argument_list|(
 name|f
 argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalStateException
-argument_list|(
-literal|"file: "
-operator|+
-name|in
-operator|+
-literal|" appears both in delegate and in cache: "
-operator|+
-literal|"cache="
-operator|+
-name|Arrays
-operator|.
-name|toString
-argument_list|(
-name|cache
-operator|.
-name|listAll
-argument_list|()
-argument_list|)
-operator|+
-literal|",delegate="
-operator|+
-name|Arrays
-operator|.
-name|toString
-argument_list|(
-name|in
-operator|.
-name|listAll
-argument_list|()
-argument_list|)
-argument_list|)
-throw|;
-block|}
+expr_stmt|;
 block|}
 name|String
 index|[]
